@@ -1,3 +1,7 @@
+2005-04-02 09:48  antirez
+
+	* ChangeLog, jim.c: fix for win32
+
 2005-04-02 09:44  antirez
 
 	* ChangeLog, Makefile, TODO, jim.c, jim.h: [package require] +
